[gd_scene load_steps=9 format=2]

[ext_resource path="res://MarCatchSheep/Visuals/sheepsprite01.png" type="Texture" id=1]
[ext_resource path="res://MarCatchSheep/Scripts/N_NoteBlock.gd" type="Script" id=2]
[ext_resource path="res://MarCatchSheep/Visuals/bombspriteanim1.png" type="Texture" id=3]
[ext_resource path="res://MarCatchSheep/SFX/PopBun0-001.ogg" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "sheep",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "bomb",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 16 )

[node name="NoteBlock" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="NoteAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 0, -26 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
animation = "sheep"
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 2.8, 2.8 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
one_way_collision = true

[node name="SFX_Playback" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
bus = "SFX"

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="SFX_Playback" to="." method="_on_SFX_Playback_finished"]
